# mcp-server-ntt

./: .gitignore  README.md  package-lock.json  pyproject.toml
.cursor/: mcp.json
frontend/: package-lock.json  package.json  vite.config.ts
frontend/src/: App.tsx  index.css
src/: backend.py  server.py  web_app.py
src/static/: index.html
src/static/assets/: index-4pcvpVSK.js  index-DQLN0KPx.css
